Remove some unneeded code